fixed kita details show view on mobile

--- a/app/assets/stylesheets/kindergartens/_show.scss
+++ b/app/assets/stylesheets/kindergartens/_show.scss
@@ -35,6 +35,9 @@
     width: 100%;
     height: 300px;
   }
+  .kita-details {
+    width: 100%;
+  }
   .kita-contacts-item {
     width: 100px;
     &:first-child {
